--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Copyright (C) 2017
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, width=device-width, user-scalable=no">
 
     <title>Fallout Shelter - Save Editor</title>
-    <meta name="description" content="Web app to edit Fallout Shelter save games. You can change dwellers SPECIAL, other stats and vault's resources.">
+    <meta name="description" content="Web app to edit Fallout Shelter save games. You can change yaga was heredwellers SPECIAL, other stats and vault's resources.">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
